# FilterMags

./: .readthedocs.yaml  README.md  filtermag.py  pyproject.toml  test-notebook.ipynb  tutorial-notebook.ipynb
FilterMags/: __init__.py  filtermag.py
FilterMags.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
FilterMags/Tutorial/: tutorial-notebook.ipynb
FilterMags/Tutorial/TestData/: spec3-5164-56067-0822.fits
TestData/: spec2-1678-53433-0429.fits  specdash-data-Spigal.json
Tests/: filtermag_tests.py
Tutorial/: tutorial-notebook.ipynb
Tutorial/TestData/: specdash-data-Z221-50.json
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  filtermag.doctree  index.doctree
docs/_build/html/: .buildinfo  filtermag.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: filtermag.rst.txt
